Closed Bug 562616 Opened 14 years ago Closed 14 years ago

[OS X 64] Box shadows with non-zero blur radius don't display in Mac 64 bit builds

Categories

(Core :: Graphics, defect)

x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- beta1+

People

(Reporter: mstange, Assigned: BenWa)

References

Details

(Keywords: regression)

Attachments

(2 files, 1 obsolete file)

Using -moz-box-shadow with blur radius results in the shadow not being rendered, for example in this testcase:
http://mxr.mozilla.org/mozilla-central/source/layout/reftests/box-shadow/boxshadow-blur.html

Unfortunately there doesn't seem to be a reftest that would catch this.

This regressed in the following range:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=2968d19b0165&tochange=29a6a85fab8e

The cairo update (bug 542605) seems like the most likely culprit to me, but I haven't verified it.
Unsurprisingly, text-shadow is equally br0ken.
blocking2.0: --- → ?
CGFloat is defined as double on 64-bit so replacing CGFloat with float is wrong.

We've had this same issue come up before (at least 3 times). They show up as these errors:
warning: passing argument X of 'Symbol’ from incompatible pointer type

I don't think we can raise these as errors in GCC but I'm going to fill and bug and try to have the push build report an error if these error are present in the build log. We should be able to avoid these errors in the future as they might be common as we switch to 64-bit.
Flags: in-testsuite?
Attached patch Reftest (obsolete) — Splinter Review
Attachment #442481 - Flags: review?
Attachment #442471 - Flags: review?(jmuizelaar)
Attachment #442481 - Flags: review? → review?(jmuizelaar)
Comment on attachment 442481 [details] [diff] [review]
Reftest

not a reftest
Attachment #442481 - Flags: review?(jmuizelaar) → review-
Attachment #442471 - Flags: review?(jmuizelaar) → review+
Attached patch Real ref test?Splinter Review
Attachment #442495 - Attachment is patch: true
Attachment #442495 - Attachment mime type: application/octet-stream → text/plain
Attachment #442495 - Flags: review?(jmuizelaar)
Attachment #442495 - Flags: review?(jmuizelaar) → review+
Attachment #442481 - Attachment is obsolete: true
Fixed the bit-rot of this patch. It's added to my patch queue so I'll check it in with my next batch of changes.
Assignee: nobody → b56girard
blocking2.0: ? → beta1+
Pushed to mozilla-central:
http://hg.mozilla.org/mozilla-central/rev/ad21f6e7d15a
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: