Replace float by CGFloat to fix BoxShadows on 64-bit OS X + added reftest. b=562616 r=jmuizelaar